src/test/deca/context/valid/Obj/select-methode-vide.deca
// Description:
//     Sélection d'une méthode dans le main
//
// Résultat:
//    Succès
//
class A {
    void methode(){}
}
{
    A a;
    a.methode();
}